RESOLVED FIXED235431
Fix AppleWin build with newer MSVC
https://bugs.webkit.org/show_bug.cgi?id=235431
Summary Fix AppleWin build with newer MSVC
Alex Christensen
Reported 2022-01-21 00:11:39 PST
Fix AppleWin build with newer MSVC
Attachments
Patch (4.46 KB, patch)
2022-01-21 00:13 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2022-01-21 00:13:37 PST
Alex Christensen
Comment 2 2022-01-21 00:15:06 PST
Fujii found these changes were needed in https://bugs.webkit.org/show_bug.cgi?id=234933
EWS
Comment 3 2022-01-21 01:42:10 PST
Committed r288356 (246262@main): <https://commits.webkit.org/246262@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449642 [details].
Radar WebKit Bug Importer
Comment 4 2022-01-21 01:43:15 PST
Note You need to log in before you can comment on or make changes to this bug.