Fix AppleWin build with newer MSVC https://bugs.webkit.org/show_bug.cgi?id=235431

Reviewed by Alex Christensen.

Source/WebCore:

* platform/graphics/ca/win/PlatformCALayerWin.cpp:
(printLayer):

Source/WebKitLegacy/win:

* WebDownloadCFNet.cpp:
(WebDownload::cancelForResume):
* WebKitQuartzCoreAdditions/CAD3DRenderer.cpp:
(WKQCA::CAD3DRenderer::resetD3DDevice):



Canonical link: https://commits.webkit.org/246262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288356 268f45cc-cd09-0410-ab3c-d52691b4dbfc